Few more atributtes added to the header. Also added a new logo image.

--- a/perkraustymo-paslauga.html
+++ b/perkraustymo-paslauga.html
@@ -74,11 +74,15 @@
     </section>
     </div>
     <footer>
-        <p></p>
-    </footer>
-</body>
-
-</html>
+        <div class="logo">
+                <img src=" src\images\logo.png"alt="Logo"> 
+        </div>
+        <div class="footer-links">
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">Contact</a>
+        </div>
+      </footer>
 </body>
 
 </html>
