--- a/index.html
+++ b/index.html
@@ -18,5 +18,18 @@
             </ul>
         </nav>
     </header>
+
+
+
+    <footer>
+        <div class="logo">
+                   <img src=" src\images\logo.png"alt="Logo"> 
+        </div>
+        <div class="footer-links">
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">Contact</a>
+        </div>
+      </footer>
 </body>
 </html>
