--- a/kroviniu-pervezimas.html
+++ b/kroviniu-pervezimas.html
@@ -74,7 +74,16 @@
     <footer>
         <p></p>
     </footer>
-
+    <footer>
+        <div class="logo">
+                   <img src=" src\images\logo.png"alt="Logo"> 
+        </div>
+        <div class="footer-links">
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">Contact</a>
+        </div>
+      </footer>
 </body>
 
 </html>
