--- a/krovos-darbai.html
+++ b/krovos-darbai.html
@@ -24,14 +24,17 @@
         </nav>
     </header>
     <div class="container">
-
+        <section class="hero">
     <main>
             <h1>KROVOS DARBAI</h1>
             <p>ECO TRIP komanda rūpinasi visapusišku savo klientų aptarnavimu, todėl, atsižvelgdami į fizinių asmenų ir
             verslo klientų poreikius, atliekame krovos ir krovinių užnešimo į reikiamą vietą darbus. Mūsų patyrę
             darbuotojai pasirengę pervežti ir pernešti bei užtikrinti, kad daiktas saugiai atsiras toje vietoje, kur jūs
             norite jį matyti.</p>
+            <button>Sužinoti daukiau</button>
         </main>
+        <img src="https://example.com/hero-image.jpg" alt="Hero Image">
+    </section>
     <section>
         <h2>Krovos paslaugų užnešimas</h2>
 
@@ -85,11 +88,15 @@
     </section>
     </div>
     <footer>
-        <p></p>
-    </footer>
-</body>
-
-</html>
+        <div class="logo">
+                   <img src=" src\images\logo.png"alt="Logo"> 
+        </div>
+        <div class="footer-links">
+          <a href="#">Home</a>
+          <a href="#">About</a>
+          <a href="#">Contact</a>
+        </div>
+      </footer>
 </body>
 
 </html>
